Wider buttons to avoid cropping the "Remember Me" label.

--- a/client/styles/base/account.css
+++ b/client/styles/base/account.css
@@ -36,7 +36,7 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>. */
 	width: 150px;
 }
 #main > .account > .profile > .wrap > .button {
-	width: 90px;
+	width: 110px;
 }
 #main > .account > .profile > .bio.wrapper {
 	height: 25px;
